[package]
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
edition = "2021"
license = "MIT"
name = "interop"
publish = false
version = "0.1.0"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
async-stream = "0.3"
strum = {version = "0.25", features = ["derive"]}
pico-args = {version = "0.5", features = ["eq-separator"]}
console = "0.15"
http = "0.2"
http-body = "0.4.2"
hyper = { path = "../3rd_party/hyper/" }
prost = "0.12"
tokio = {path = "../3rd_party/tokio/tokio", features = ["rt-multi-thread", "time", "macros"]}
tokio-stream = { path = "../3rd_party/tokio/tokio-stream" }
tonic = {path = "../tonic", features = ["tls"]}
tower = {path = "../3rd_party/tower/tower"}
tracing-subscriber = {version = "0.3"}

[build-dependencies]
tonic-build = {path = "../tonic-build", features = ["prost"]}
