[package]
authors = ["Juan Alvarez <alce@me.com>"]
categories = ["network-programming", "asynchronous"]
description = """
grpc-web protocol translation for tonic services.
"""
documentation = "https://docs.rs/tonic-web/0.11.0"
edition = "2021"
homepage = "https://github.com/hyperium/tonic"
keywords = ["rpc", "grpc", "grpc-web"]
license = "MIT"
name = "tonic-web"
readme = "README.md"
repository = "https://github.com/hyperium/tonic"
version = "0.11.0"

[dependencies]
base64 = "0.21"
bytes = "1"
tokio-stream = { path = "../3rd_party/tokio/tokio-stream" }
http = "0.2"
http-body = "0.4"
hyper = {version = "0.14", default-features = false, features = ["stream"]}
pin-project = "1"
tonic = {version = "0.11", path = "../tonic", default-features = false}
tower-service = { path = "../3rd_party/tower/tower-service" }
tower-layer = { path = "../3rd_party/tower/tower-layer" }
tower-http = { version = "0.4", path = "../3rd_party/tower-http/tower-http/", features = ["cors"] }
tracing = "0.1"

[dev-dependencies]
tokio = {version = "1", features = ["macros", "rt"]}
