[package]
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
edition = "2021"
license = "MIT"
name = "compression"
publish = false
version = "0.1.0"

[dependencies]
bytes = "1"
http = "0.2"
http-body = "0.4"
hyper = { path = "../../3rd_party/hyper" }
paste = "1.0.12"
pin-project = "1.0"
prost = "0.12"
tokio = {path = "../../3rd_party/tokio/tokio", features = ["macros", "rt-multi-thread", "net"]}
tokio-stream = { path = "../../3rd_party/tokio/tokio-stream" }
tonic = {path = "../../tonic", features = ["gzip", "zstd"]}
tower = {path = "../../3rd_party/tower/tower", features = []}
tower-http = {path = "../../3rd_party/tower-http/tower-http", features = ["map-response-body", "map-request-body"]}

[build-dependencies]
tonic-build = {path = "../../tonic-build" }
